# PL1CompInPy

./: .gitignore  CODE_OF_CONDUCT.md  FEATURES.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
bootstrap/: README.md  bootstrap_backend_m3.pl1  bootstrap_compiler.pl1  bootstrap_lexer.pl1  bootstrap_parser.pl1  bootstrap_runtime.pl1
docs/: API.md  DELIVERY.md  SEMANTICS.md  SPONSORSHIP.md
examples/: README.md  hello.pl1
examples/backend/: binary_entry.pl1  dotnet_il.pl1  library_artifacts.py  python_source.pl1  x86_64_windows.pl1
examples/builtins/: complex_math_builtins.pl1  declared_substr.pl1  internal_runtime_allocation.pl1  numeric_string_builtins.pl1  pointer.pl1  pointer_offsets.pl1  substr.pl1
examples/language/: calculation_engine.pl1  call_by_name.pl1  call_by_reference.pl1  command_line_main.pl1  comment_sections.pl1  control_structures.pl1  declarations.pl1  do_while_until.pl1  generic.pl1  goto_labels.pl1  include_common.pli  include_main.pl1  module_helper.pl1  multi_source_main.pl1  operator_precedence_words.pl1  picture_float.pl1  preprocessor_commands.pl1  preprocessor_conditionals.pl1  procedure_main.pl1  quicksort_imported.pli  recursive_proc.pl1  select_when.pl1  structures_records.pl1  visitor_control_blocks.pl1
examples/runtime/: arrays.pl1  based_pointer.pl1  based_pointer_structure.pl1  based_pointer_two_records.pl1  based_structure_runtime.py  complex_compute_engine.py  (+21 more)
scripts/: generate_api_docs.py
tests/: test_binary_pipeline.py  test_bootstrap.py  test_compiler.py  test_docs.py  test_examples.py
(+70 files in other folders)
